--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <version.wildfly.swarm>2017.2.0</version.wildfly.swarm>
+        <ignite.version>2.2.0</ignite.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
@@ -80,44 +81,35 @@
             <groupId>org.wildfly.swarm</groupId>
             <artifactId>jaxrs-validator</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.wildfly.swarm</groupId>
-            <artifactId>logstash</artifactId>
-        </dependency>
-        <!---->
         <!--<dependency>-->
-        <!--<groupId>com.unknown</groupId>-->
-        <!--<artifactId>ignite-common</artifactId>-->
-        <!--<version>1.0-SNAPSHOT</version>-->
-        <!--<exclusions>-->
-        <!--<exclusion>-->
-        <!--<groupId>io.netty</groupId>-->
-        <!--<artifactId>netty-common</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-        <!--<groupId>io.netty</groupId>-->
-        <!--<artifactId>netty-handler</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-        <!--<groupId>io.netty</groupId>-->
-        <!--<artifactId>netty-transport</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-        <!--<groupId>io.netty</groupId>-->
-        <!--<artifactId>netty-codec</artifactId>-->
-        <!--</exclusion>-->
-        <!--<exclusion>-->
-        <!--<groupId>io.netty</groupId>-->
-        <!--<artifactId>netty-buffer</artifactId>-->
-        <!--</exclusion>-->
-        <!--</exclusions>-->
+        <!--<groupId>org.wildfly.swarm</groupId>-->
+        <!--<artifactId>logstash</artifactId>-->
         <!--</dependency>-->
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.8.Final</version>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-core</artifactId>
+            <version>${ignite.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-spring</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-cassandra-store</artifactId><!--artifactId>ignite-cassandra</artifactId-->
+            <version>${ignite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-log4j</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.ignite</groupId>
+            <artifactId>ignite-indexing</artifactId>
+            <version>${ignite.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.example</groupId>
             <artifactId>holentities</artifactId>
